<?xml version="1.0" encoding="ISO-8859-1"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <parent>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-parent</artifactId>
    <version>39</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.seeburger.as</groupId>
  <artifactId>commons-jxpath</artifactId>

  <name>Apache Commons JXPath</name>
  <!-- when cutting a release, be sure to modify the commons.release.version property,
    found at /project/properties/commons.release.version in this document -->
  <version>1.4.0.SEE9-SNAPSHOT</version>

  <description>A Java-based implementation of XPath 1.0 that, in addition to XML processing, can inspect/modify Java object graphs (the library's explicit purpose) and even mixed Java/XML structures.</description>
  <url>http://commons.apache.org/proper/commons-jxpath/</url>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/JXPATH</url>
  </issueManagement>
  <inceptionYear>2001</inceptionYear>
  <developers>
    <developer>
      <id>dmitri</id>
      <name>Dmitri Plotnikov</name>
      <email>dmitri@apache.org</email>
      <organization />
    </developer>
    <developer>
      <id>craigmcc</id>
      <name>Craig McClanahan</name>
      <email>Craig.McClanahan@eng.sun.com</email>
      <organization>Sun Microsystems</organization>
    </developer>
    <developer>
      <id>mbenson</id>
      <name>Matt Benson</name>
      <email>mbenson@apache.org</email>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Michele Vivoda</name>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:git@github.com:seeburger-ag/commons-jxpath.git</connection>
    <developerConnection>scm:git:git@github.com:seeburger-ag/commons-jxpath.git</developerConnection>
    <url>https://github.com/seeburger-ag/commons-jxpath</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <!-- Java 11 baseline. NOTE: commons-parent 39 pins maven-compiler-plugin 3.3,
         which predates the <release> option (added in 3.6.0). Once the compiler
         plugin is upgraded, replace source/target with:
           <maven.compiler.release>11</maven.compiler.release> -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <commons.componentid>jxpath</commons.componentid>
    <commons.module.name>org.apache.commons.jxpath</commons.module.name>
    <!-- should agree with project.version for releases: -->
    <commons.release.version>1.4</commons.release.version>
    <commons.jira.id>JXPATH</commons.jira.id>
    <commons.jira.pid>12310480</commons.jira.pid>
    <commons.osgi.import>*;resolution:=optional</commons.osgi.import>

    <!-- SEE: overwriting repository URLs and names -->
    <distMgmtSnapshotsUrl>https://repo.seeburger.de/archiva/repository/snapshot/</distMgmtSnapshotsUrl>
    <distMgmtReleaseUrl>https://repo.seeburger.de/archiva/repository/release/</distMgmtReleaseUrl>
    <distMgmtSnapshotsName>SEE Development Snapshot Repository</distMgmtSnapshotsName>
    <distMgmtReleaseName>SEE Release Distribution Repository</distMgmtReleaseName>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>src/assembly/bin.xml</descriptor>
            <descriptor>src/assembly/src.xml</descriptor>
          </descriptors>
          <tarLongFileMode>gnu</tarLongFileMode>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-publish-plugin</artifactId>
        <configuration>
          <ignorePathsToDelete>
            <ignorePathToDelete>javadocs</ignorePathToDelete>
          </ignorePathsToDelete>
        </configuration>
      </plugin>

      <!-- SEEBURGER, disable GPG signing for releases -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <configuration>
        <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.1.1</version>
        <scope>runtime</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jsp-api</artifactId>
      <version>2.0</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jdom</groupId>
      <artifactId>jdom</artifactId>
      <version>1.0</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>1.8.2</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.mockrunner</groupId>
      <artifactId>mockrunner-jdk1.3-j2ee1.3</artifactId>
      <version>0.4</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>cglib-nodep</groupId>
          <artifactId>cglib-nodep</artifactId>
        </exclusion>
        <!-- Obsolete XML stack: on Java 9+ the packages org.w3c.dom.* / javax.xml.*
             are owned by the java.xml platform module and can never be loaded from
             the classpath. Keeping these jars around shadows the JDK's JAXP
             implementation and reintroduces NoClassDefFoundError: org/w3c/dom/ls/DocumentLS.
             Use the parser built into the JDK instead. -->
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
        <exclusion>
          <groupId>jboss</groupId>
          <artifactId>jboss-jee</artifactId>
        </exclusion>
        <exclusion>
          <groupId>nekohtml</groupId>
          <artifactId>nekohtml</artifactId>
        </exclusion>
        <exclusion>
          <groupId>struts</groupId>
          <artifactId>struts</artifactId>
        </exclusion>
        <exclusion>
          <groupId>oro</groupId>
          <artifactId>oro</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-validator</groupId>
          <artifactId>commons-validator</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-digester</groupId>
          <artifactId>commons-digester</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <version>2.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <configLocation>${basedir}/checkstyle.xml</configLocation>
          <excludes>org/apache/commons/jxpath/ri/parser/*</excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <targetJdk>1.3</targetJdk>
          <excludes>
            <exclude>org/apache/commons/jxpath/ri/parser/*</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>2.4.0</version>
        <configuration>
          <excludeFilterFile>${basedir}/conf/findbugs-exclude-filter.xml</excludeFilterFile>
          <xmlOutput>true</xmlOutput>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <linksource>true</linksource>
          <links>
            <link>http://java.sun.com/j2se/1.3/docs/api/</link>
            <link>http://java.sun.com/javaee/5/docs/api/</link>
            <link>http://commons.apache.org/beanutils/apidocs/</link>
            <link>http://www.jdom.org/docs/apidocs/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>${commons.rat.version}</version>
        <configuration>
          <excludes>
            <exclude>src/java/org/apache/commons/jxpath/ri/parser/*</exclude>
            <exclude>src/conf/MANIFEST.MF</exclude>
            <exclude>xdocs/style/project.css</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <distributionManagement>
    <repository>
      <id>apache.releases.https</id>
      <name>${distMgmtReleaseName}</name>
      <url>${distMgmtReleaseUrl}</url>
    </repository>
    <snapshotRepository>
      <id>apache.snapshots.https</id>
      <name>${distMgmtSnapshotsName}</name>
      <url>${distMgmtSnapshotsUrl}</url>
    </snapshotRepository>
    <!--
    <site>
      <id>apache.website</id>
      <name>Default Site</name>
      <url>scp://people.apache.org/www/commons.apache.org/jxpath/</url>
    </site>
    -->
  </distributionManagement>
</project>
